third_party/move/move-compiler/tests/move_check/typing/recursive_constant.exp
error[E04013]: invalid statement or expression in constant
  ┌─ tests/move_check/typing/recursive_constant.move:3:20
  │
3 │     const X: u64 = Y;
  │                    ^ Other constants are not supported in constants

error[E04013]: invalid statement or expression in constant
  ┌─ tests/move_check/typing/recursive_constant.move:4:20
  │
4 │     const Y: u64 = X;
  │                    ^ Other constants are not supported in constants

